# iris-tcp-rpc-framework

./: .gitignore  README.md  api_spec.json  docker-compose.yml
client/: .dockerignore  Dockerfile  pyproject.toml
client/src/: api_client.py  container.py  main.py  models.py  repl.py
client/src/adapters/: in_memory_transaction_log.py  json_serializer.py  length_prefixed_framer.py  metrics_collector.py  rich_presenter.py  tcp_transport.py
client/src/ports/: i_framer.py  i_metrics.py  i_presenter.py  i_serializer.py  i_transaction_log.py  i_transport.py
client/tests/: test_api_client.py  test_container.py  test_framer.py  test_metrics_collector.py  test_repl.py  test_rich_presenter.py  test_serializer.py  test_spec_generator.py  test_transaction_log.py
server/: .dockerignore  CMakeLists.txt  Dockerfile
server/data/: dreams.txt  economics.txt  money.txt  philosophy.txt
server/src/: api.h  connection.h  container.h  main.cpp  request_handler.cpp  request_handler.h  types.h
server/src/adapters/: dispatcher.cpp  dispatcher.h  file_corpus.cpp  file_corpus.h  in_memory_transaction_log.h  json_serializer.h  length_prefixed_framer.h  metrics_collector.h  tcp_listener.cpp  tcp_listener.h
server/src/adapters/linux/: linux_connection.cpp  linux_connection.h  linux_tcp_listener.cpp  linux_tcp_listener.h
server/src/adapters/win/: win_connection.cpp  win_connection.h  win_tcp_listener.cpp  win_tcp_listener.h  winsock_init.h
server/src/domain/: add_func.h  fibonacci_func.h  multiply_func.h  reverse_func.h  tfidf_func.h  to_base_func.h
server/src/ports/: i_api_function.h  i_connection.h  i_corpus.h  i_dispatcher.h  i_framer.h  i_listener.h  i_metrics.h  i_serializer.h  i_transaction_log.h
server/tests/: test_api_functions.cpp  test_connection_interface.cpp  test_container.cpp  test_dispatcher.cpp  test_fibonacci.cpp  test_file_corpus.cpp  test_framer.cpp  test_metrics_collector.cpp  test_serializer.cpp  test_tfidf.cpp  test_to_base.cpp  test_transaction_log.cpp
tools/: generate_spec.py  integration_test.py
